--- a/css/style.css
+++ b/css/style.css
@@ -119,10 +119,15 @@ html,body {
         
     #taskExtended {
         padding: 5px 0;
-        color: #777;
+        color: #444;
         cursor: default;
         font-size: 9px;
+        opacity: .8;
+        transition: all .05s ease;
     }
+        #taskExtended:hover {
+            opacity: 1;
+        }
         #taskExtended .b {
             border: solid #c1c1c1;
             border-width: 1px 1px 2px 1px;
@@ -134,6 +139,17 @@ html,body {
             color: #666;
             font-family: Georgia, Times, 'Times new roman';
         }
+        #taskExtended .s {
+            border: 1px solid #c1c1c1;
+            border-radius: 4px;
+            
+            padding: 1px 4px;
+            background-color: #fff;
+            
+            color: #222;
+            font-family: Tahoma, Arial, Verdana;
+        }
+        
         
 #tasklist {
     display: none;
