--- a/wget-gui-light/css/style.css
+++ b/wget-gui-light/css/style.css
@@ -20,7 +20,7 @@ label,article,details,footer,header,menu,nav,input,textarea,select {
     width: 0;
 }
 
-.hidden {
+.hidden, .hide {
     display: none;
 }
 
@@ -297,6 +297,54 @@ html,body {
         #footer .button:hover {
             margin: 0 12px;
         }
+
+/* ----------------------------------------------------------------------------------- */
+
+#browserExtension {
+    display: none; /* set 'block' while develop */
+    background-color: #333;
+    width: 60px;
+    padding: 70px 70px 3px 70px;
+    vertical-align: bottom;
+    text-align: center;
+    transform: rotate(315deg);
+    
+    color: #fff;
+    font-size: 9px;
+    text-decoration: none;
+    
+    position: absolute;
+    top: -55px;
+    left: -110px;
+    
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.4);
+    opacity: .2;
+}
+    #browserExtension:hover {
+        top: -42px;
+        left: -95px;
+        font-size: 12px;
+        opacity: 1 !important;
+    }
+        #browserExtension.chrome:hover {
+            background-color: #cf8638;
+        }
+        #browserExtension.firefox:hover {
+            background-color: #f19a2a;
+        }
+        #browserExtension.ie:hover {
+            background-color: #00caff;
+        }
+        #browserExtension.safari:hover {
+            background-color: #00a0e6;
+        }
+        #browserExtension.opera:hover {
+            background-color: #f25648;
+        }
+
+
 
 /* ----------------------------------------------------------------------------------- */
    
