--- a/wget-gui-light/css/notifIt.css
+++ b/wget-gui-light/css/notifIt.css
@@ -23,26 +23,39 @@
     padding: 0;
     margin: 0;
 }
+#ui_notifIt a {
+    
+}
 
 /* Color setup */
 /* You are free to change all of this */
 .success{
     background-color: yellowgreen;
     color: white;
+} .success a {
+    color: white;
 }
 .error{
     background-color: orangered;
+    color: white;
+} .error a {
     color: white;
 }
 .warning{
     background-color: orange;
     color: white;
+} .warning a {
+    color: white;
 }
 .info{
     background-color: deepskyblue;
     color: white;
+} .info a {
+    color: white;
 }
 .default{
     background-color: #EEE;
+    color: #444;
+} .default a {
     color: #444;
 }
