--- a/wget-gui-light/css/style.css
+++ b/wget-gui-light/css/style.css
@@ -2,22 +2,14 @@
 
 html,body,div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,img,small,sub,b,dl,dd,dt,ul,li,
 label,article,details,footer,header,menu,nav,input,textarea,select {
-    background: transparent;
-    border: 0;
-    outline: 0;
-    padding: 0;
-    margin: 0;
+    background: transparent; border: 0;
+    outline: 0; padding: 0; margin: 0;
 }
 
 .clear:after {
-    clear: both;
-    content: ' ';
-    display: block;
-    font-size: 0;
-    height: 0;
-    line-height: 0;
-    visibility: hidden;
-    width: 0;
+    clear: both; content: ' '; display: block;
+    font-size: 0; line-height: 0; visibility: hidden;
+    width: 0; height: 0;
 }
 
 .hidden, .hide {
@@ -110,8 +102,8 @@ html,body {
     }
     #menu .bottom {
         position: absolute; bottom: 0;
-        margin-bottom: 100px; width: 200px;
-        text-align: center;
+        padding: 5px 0 100px 0; width: 200px;
+        text-align: center; background: #444;
         font-family: Georgia, Times, 'Times new roman';
     }
 #menu.open  { left: 0;      box-shadow: 6px 0px 22px 0px rgba(0, 0, 0, 0.22); }
