--- a/wget-gui-light/gui/css/style.css
+++ b/wget-gui-light/gui/css/style.css
@@ -62,6 +62,16 @@ table{border-collapse:collapse;border-spacing:0}
   \___|_\___/_.__/\__,_|_| |___/\__|\_, |_\___/__/
                                     |__/
 */
+#nojs {
+  position:fixed; left:0; top:0; width:100%; height:100%; z-index:999; color:#111;
+  background-color:#fff;
+}
+  #nojs > div {
+    position:absolute; top:50%; left:50%; width:300px; height:30px; margin:-15px 0 0 -150px;
+    text-align:center; font-size:1em;
+  }
+  #nojs > div h1 {font-size: 2em; padding: 0 0 0.4em 0;}
+
 .clear, .clear:after {
   clear: both; content: ' '; display: block;font-size: 0; line-height: 0; visibility: hidden;
   width: 0; height: 0;
@@ -89,6 +99,7 @@ html, body {
   #menu-button span {
     position: relative; top: -0.3em; left: 0.4em; font-size: 1.6em; color: #fff; opacity: .7;
     text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased;
+    -webkit-transition: all 300ms ease; transition: all 300ms ease;
   }
   #menu-button:active {
     left: 1.65em; top: 1.65em;
@@ -98,9 +109,10 @@ html, body {
 
 #menu {
   position: fixed; left: 0; height: 100%; width: 200px; padding: 60px 30px 20px 20px;
-  background: #444; overflow: hidden; -webkit-transition: all 300ms ease; transition: all 300ms ease;
-  color: #fff; box-shadow: 6px 0px 22px 0px rgba(0, 0, 0, 0.22); z-index: 10;
+  background: #444; overflow: hidden; color: #fff; box-shadow: 6px 0px 22px 0px rgba(0, 0, 0, 0.22); z-index: 10;
 }
+  #menu {-webkit-transition: all 300ms ease; transition: all 300ms ease;}
+  #menu > * {-webkit-transition: all 150ms ease; transition: all 150ms ease;}
   #menu a {
     color: #fff; text-decoration: none;
   }
@@ -127,7 +139,9 @@ html, body {
       text-overflow:clip; overflow:hidden; font-size:80%; font-family:Tahoma,Verdana,Arial;
     }
 #menu.open  {left: 0; box-shadow: 6px 0px 22px 0px rgba(0, 0, 0, 0.22);}
+#menu.open > * {opacity: 1;}
 #menu.close {left: -250px; box-shadow: none;}
+#menu.close > * {opacity: 0;}
 
 
 /*
@@ -218,7 +232,7 @@ html, body {
 
   #addTaskAddr {
     border: 1px solid #c1c1c1; border-radius: 2px; background-color: #fff; color: #444;
-    font-size: 1em; font-family: Tahoma, Verdana, Sans-serif; position: relative;
+    font-size: 1em; font-family: Tahoma, Verdana, Sans-serif; position: relative; margin: 0;
     padding: 8px 6px; left: -12px; resize: vertical; max-height: 115px; width: 100%;
   }
     #addTaskAddr:focus {border-color: #4285f4}
